--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"styled-components": "^6.1.1"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.1.5",
+		"@testing-library/react": "^14.1.2",
 		"@types/react": "^18.2.37",
 		"@types/react-dom": "^18.2.15",
 		"@vitejs/plugin-react-swc": "^3.5.0",
@@ -24,6 +26,7 @@
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.4",
+		"jsdom": "^23.0.1",
 		"vite": "^5.0.0",
 		"vitest": "^0.34.6"
 	}
