--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
 		"@testing-library/user-event": "^14.5.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.12.0",
-		"styled-components": "^6.1.1"
+		"react-icons": "^4.12.0"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^6.1.5",
